refactor: move tgbot/accounts to tg module
